# ce_sparse_gpr

./: .gitignore  LICENSE  README.md  environment.yml  filter_active_learning_candidates_ce.py  mc_grand_calculator_serial.py  mc_grand_calculator_utils.py  mc_grand_serial.py  mc_grand_utils.py  pyproject.toml
ce_sparse_gpr/: __init__.py  calculator.py  ce_config.py  ce_extractor.py  dataset.py  dataset_analysis.py  gpr.py  plot.py  train.py
